apps/base/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.kubernetes.io/target: blog.${DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: blog.${DOMAIN}
  tls:
    - secretName: traefik-cert-prod
      hosts:
        - blog.${DOMAIN}
